<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical">

    <ImageView
        android:layout_width="60dp"
        android:layout_height="60dp"
        android:padding="8dp"
        android:layout_marginTop="25dp"
        android:src="@drawable/ic_clear"
        android:background="@drawable/circle_bg"
        android:layout_gravity="center" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textColor="@color/red"
        android:layout_gravity="center"
        android:textSize="20sp"
        android:layout_marginTop="20dp"
        android:textStyle="bold"
        android:text="@string/oops"/>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textColor="@color/textGrey"
        android:layout_margin="10dp"
        android:layout_gravity="center"
        android:textSize="20sp"
        android:layout_marginTop="20dp"
        android:text="@string/somethingWentWrong"/>

    <TextView
        android:id="@+id/tvTryAgain"
        android:layout_width="220dp"
        android:layout_height="wrap_content"
        android:text="@string/tryAgain"
        android:textSize="20sp"
        android:elevation="3dp"
        android:gravity="center"
        android:textAllCaps="true"
        android:padding="12dp"
        android:layout_gravity="center"
        android:layout_margin="20dp"
        android:textColor="@color/white"
        android:background="@color/red"/>

</LinearLayout>